Fix inverted scrollbars in inverted ui

--- a/src/definitions/globals/site.less
+++ b/src/definitions/globals/site.less
@@ -140,22 +140,32 @@ a:hover {
     background: @trackBackground;
     border-radius: @trackBorderRadius;
   }
-
   body ::-webkit-scrollbar-thumb {
     cursor: pointer;
     border-radius: @thumbBorderRadius;
     background: @thumbBackground;
     transition: @thumbTransition;
   }
-
   body ::-webkit-scrollbar-thumb:window-inactive {
     background: @thumbInactiveBackground;
   }
-
   body ::-webkit-scrollbar-thumb:hover {
     background: @thumbHoverBackground;
   }
 
+  /* Inverted UI */
+  body .ui.inverted::-webkit-scrollbar-track {
+    background: @trackInvertedBackground;
+  }
+  body .ui.inverted::-webkit-scrollbar-thumb {
+    background: @thumbInvertedBackground;
+  }
+  body .ui.inverted::-webkit-scrollbar-thumb:window-inactive {
+    background: @thumbInvertedInactiveBackground;
+  }
+  body .ui.inverted::-webkit-scrollbar-thumb:hover {
+    background: @thumbInvertedHoverBackground;
+  }
 }
 
 /*******************************
